chore: change old technical names for verifiable (#394)
